fix(style) removes horizontal scrolling for body

--- a/src/main.scss
+++ b/src/main.scss
@@ -196,6 +196,7 @@ body {
   font-size: var(--s-text);
   line-height: var(--s-line-height);
   color: var(--c-text);
+  overflow-x: hidden;
 }
 
 .font-compensated {
